--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -447,6 +447,11 @@ table thead th {
     background-color: #d4edda;
     border-color: #c3e6cb;
 }
+.alert-error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+}
 
 #errorMessage {
     position: absolute;
