--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,6 +67,26 @@
     background: rgba(100, 161, 206, 1);
 }
 
+/*estilos ventana modal Observaciones*/
+.modal-title {
+    color: #333;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+
+.modal-body {
+    color: #666;
+    font-size: 1.2rem;
+}
+
+
+.close {
+    color: #aaa;
+    font-size: 2rem;
+    opacity: 1;
+}
+
 /* Custom text styles */
 .custom-text {
     font-family: Calibri, sans-serif;
@@ -448,6 +468,7 @@ table thead th {
     background-color: #d4edda;
     border-color: #c3e6cb;
 }
+
 .alert-error {
     background-color: #f8d7da;
     color: #721c24;
@@ -533,7 +554,8 @@ table thead th {
 
 /*EQUIPAMIENTO*/
 #equipamiento-container {
-    margin-top: 150px;
+    margin-top: 100px;
+    margin-bottom: 40px;
 }
 
 #img-icono-equip {
@@ -828,4 +850,3 @@ table thead th {
 #reset-password-container {
     margin-top: 130px;
 }
-
