--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -279,6 +279,10 @@ table thead th {
 
 
 /*PERMISOS*/
+#permisos-container {
+    margin-top: -40px;
+    margin-bottom: 40px;
+}
 #permisos-nav {
     margin-top: 130px;
 }
@@ -289,7 +293,7 @@ table thead th {
 }
 
 #permisos-table {
-    margin-top: -30px;
+    margin-top: 25px;
 }
 
 
