--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -315,13 +315,17 @@ table thead th {
 
 
 /*EMPLEADOS*/
+#empleados-container{
+    margin-top: -40px;
+    margin-bottom:40px;
+}
 #empleados-filtro {
     margin-top: 10px;
 }
 
 #empleados-crear {
     margin-top: 120px;
-    margin-left: 17px;
+    margin-left: 1px;
     background: linear-gradient(90deg, rgba(199, 218, 233, 0.88) 0%, #5098CD 0.01%, #357AAB 46.5%, #3D83B5 85.5%);
     padding: 15px;
     gap: 10px;
