--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -682,10 +682,12 @@ table thead th {
 /*SOFTWARE INSTALADO*/
 #equipos-container {
     margin-top: 100px;
+    margin-bottom:40px;
 }
 
 #equipos-table {
     margin-top: -15px;
+    
 }
 
 
@@ -698,12 +700,14 @@ table thead th {
 /*AREAS*/
 #areas-container {
     margin-top: 100px;
+    margin-bottom: 40px;
 }
 
 
 /*LOCALZACIONES*/
 #localizaciones-container {
     margin-top: 100px;
+    margin-bottom: 40px;
 
 }
 
@@ -717,17 +721,25 @@ table thead th {
 /*FALLAS*/
 #fallas-container {
     margin-top: 100px;
+    margin-bottom: 40px;
 }
-
+/*EQUIPOS-MANT*/
+#descripcion-equipos-mant{
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    max-width: 900px;
+}
 /*TIPOS DE EQUIPOS*/
 #tipo-equip-container {
     margin-top: 100px;
+    margin-bottom: 40px;    
 }
 
 
 /*TIPOS SOLICITUDES*/
 #tipos-sol-container {
     margin-top: 100px;
+    margin-bottom: 40px;
 }
 
 
