sacar bootstrap de las vistas y acomodar los @endsection

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -398,6 +398,7 @@ table thead th {
 
 #empleados-cursos-conteiner {
     margin-top: 100px;
+    margin-bottom: 40px;
 }
 
 #titulo-cursos-empleado {
