ordenar documentacion.blade, cambiar anexos por registros de capacitaciones y desactivar botones al cerrar instancias

--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -588,10 +588,16 @@ table thead th {
 
 #iconos-instancias {
     margin: 5px;
+    text-decoration: none;
+    border: none;
 }
 
 #iconos-disabled {
     opacity: 0.5;
+    pointer-events: none;
+    color: #ccc;
+    text-decoration: none;
+    border: none;
 }
 
 #btn-eliminar {
