--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -523,6 +523,9 @@ table thead th {
     text-decoration-skip-ink: none;
     color: rgba(0, 51, 102, 1);
 }
+#mail{
+    color: rgba(0, 51, 102, 1);
+}
 
 #filtro {
 
