--- a/public/css/encabezadoFooter.css
+++ b/public/css/encabezadoFooter.css
@@ -5,8 +5,9 @@
     right: 20px;
 
 }
-#nombre-usuario{
-    font-weight: bold; 
+
+#nombre-usuario {
+    font-weight: bold;
     margin-top: 17px;
 }
 
@@ -106,27 +107,32 @@ footer p {
 }
 
 @media (max-width: 1366px) {
-    .authenticated .dropdown button{
+    .authenticated .dropdown button {
         margin-left: 100px;
     }
 }
 
 
-#dropdown{
-    border: none; 
-    background: none; 
-    padding: 0; 
+#dropdown {
+    border: none;
+    background: none;
+    padding: 0;
     cursor: pointer;
+    outline: none;
+    box-shadow: none;
 }
 
 #dropdown:hover {
-    transform: scale(1.3); /* Aumenta el tamaño al 110% */
-  }
+    transform: scale(1.3);
+    /* Aumenta el tamaño al 110% */
+    border: none;
+    background: none;
+}
 
 .dropdown-item:hover {
     background-color: #f8f9fa;
     color: #007bff;
-    cursor: pointer;
+   
 }
 
 .dropdown-item:hover,
