--- a/public/css/encabezadoFooter.css
+++ b/public/css/encabezadoFooter.css
@@ -112,23 +112,45 @@ footer p {
     }
 }
 
-#nombre-usuario{
-    color: white; 
-    white-space: nowrap; 
-    font-weight: bold; 
+.dropdown-menu {
+    display: none;
+    position: fixed;
+    top: 50px;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    min-width: auto;
+    padding: 8px 16px;
+    width: max-content;
+}
+.dropdown-menu.show {
+    display: block;
+}
+
+.dropdown-menu-right {
+    right: 0 !important;
+}
+
+#nombre-usuario {
+    color: white;
+    white-space: nowrap;
+    font-weight: bold;
     margin-right: 2px;
     margin-top: 1px;
 }
-#user-container{
+
+#user-container {
     margin-top: 30px;
 }
 
 
 
-#cerrar-sesion{
-    border: none; 
-    background: none; 
-    width: 100%; 
+#cerrar-sesion {
+    border: none;
+    background: none;
+    width: 100%;
     text-align: left;
 }
 
@@ -151,7 +173,7 @@ footer p {
 .dropdown-item:hover {
     background-color: #f8f9fa;
     color: #007bff;
-   
+
 }
 
 .dropdown-item:hover,
