--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,9 @@
 #btn-agregar:active {
     background: rgba(100, 161, 206, 1);
 }
-
+#btn-modal{
+    margin-top:20px;
+}
 /*estilos ventana modal Observaciones*/
 .modal-title {
     color: #333;
