--- a/public/css/createOptimized.css
+++ b/public/css/createOptimized.css
@@ -175,3 +175,15 @@ table thead th {
     margin: 0; 
     margin-top: -50px;
 }
+.d-flex.justify-content-between {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-md-6:nth-child(1) {
+    order: 2;
+}
+
+.col-md-6:nth-child(2) {
+    order: 1;
+}
