--- a/public/css/createOptimized.css
+++ b/public/css/createOptimized.css
@@ -2,7 +2,9 @@
     max-height: 350px;  
     overflow-y: auto;   
 }
-
+body{
+overflow-y: hidden;
+}
 .table {
     width: 100%;
     table-layout: fixed;
@@ -251,6 +253,7 @@ table thead th {
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* Sombra */
     margin-bottom: -20px;
     
+    
 }
 #cursos-create-container{
     margin-top: 60px;
@@ -276,13 +279,19 @@ table thead th {
 }
 
 #update-areas{
-    margin-top: 7px;
+    /*margin-top: 7px;*/
     margin-bottom: 6px;
     display: flex;
     justify-content: center; /* Centrar horizontalmente */
+    margin-top:-17px;
   
 }
-
+#update-areas button{
+    display:none;
+}
+#filter{
+    margin-top: 56px;
+}
 
 
 @media (max-width: 1366px) and (min-width: 1280px),
