editar varias veces un mismo curso y arreglar filtro de personas por area

--- a/public/css/createOptimized.css
+++ b/public/css/createOptimized.css
@@ -198,6 +198,9 @@ table thead th {
 #display-none{
     display: none;
 }
+.display-none{
+    display: none;
+}
 #other-trainer{
     width: 500px;
 }
