--- a/public/css/createOptimized.css
+++ b/public/css/createOptimized.css
@@ -150,7 +150,25 @@ table thead th {
     color: rgba(245, 245, 245, 1);
     height: 40px;
 }
-
+.asignar-btn{
+    background: linear-gradient(90deg, rgba(199, 218, 233, 0.88) 0%, #5098CD 0.01%, #357AAB 46.5%, #3D83B5 85.5%);
+    padding: 8px 12px 8px 12px;
+    gap: 10px;
+    border-radius: 8px;
+    opacity: 0px;
+    box-shadow: 0px 4px 4.6px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 16.8px;
+    letter-spacing: -0.03em;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: rgba(245, 245, 245, 1);
+    height: 40px;
+}
 .row {
     margin: 0;
     padding: 0;
@@ -305,6 +323,9 @@ table thead th {
     }
     #anotherTrainerInput{
         margin-left: 890px;
+    }
+    body{
+        overflow-y:auto;
     }
     
 }
