crear vista, agregar forms y eliminar solicitudes

--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -276,9 +276,11 @@ nav {
 }
 
 #powerbi-principal {
-    margin-left: 128px;
+    margin-left: 75px;
 }
-
+#medicamentos-principal {
+    margin-left: 75px;
+}
 #permisos-principal {
     margin-left: 120px;
 }
