--- a/public/css/planillaCursos.css
+++ b/public/css/planillaCursos.css
@@ -13,7 +13,7 @@
       width: 100%;
       border-collapse: collapse;
     }
-
+    
     th,
     td {
       border: 1px solid black;
@@ -30,4 +30,10 @@
         font-size: 16px;
         cursor: pointer;
       }
+  }
+  .boton-pdf-medicamentos{
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    height: 100px;
   }
