--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -434,6 +434,25 @@ table thead th {
     padding: 0;
     cursor: pointer;
 }
+.icono{
+    border: none;
+    background: none;
+    padding: 0;
+    cursor: pointer;
+}
+button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+    pointer-events: none;
+    border:none;
+}
+button:not(:disabled) {
+    border: none; /* sin borde cuando está activo */
+    outline: none;
+    background: none;
+    cursor: pointer;
+}
+
 
 #icono-area {
     border: none;
@@ -527,7 +546,11 @@ table thead th {
     color: #721c24;
     border-color: #f5c6cb;
 }
-
+.alert-danger {
+    background-color: #f8d7da;
+    color: #721c24;
+    border-color: #f5c6cb;
+}
 #errorMessage {
     position: absolute;
     top: 0;
